# command-line-rust

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: CI.yml
crates/catr/: Cargo.toml
crates/catr/src/: lib.rs
crates/catr/tests/: cli.rs
crates/echor/: Cargo.toml
crates/headr/src/: lib.rs
crates/uniqr/: Cargo.toml
crates/uniqr/src/: lib.rs
crates/wcr/: Cargo.toml
crates/wcr/src/: fileinfo.rs  lib.rs
crates/wcr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs
headr/tests/: cli.rs
