[package]
name = "uniqr"
version = "0.1.0"
edition = "2021"
authors = [ "Tom Fleet <tomfleet2018@gmail.com>" ]
description = "Rust clone of uniq."

[dependencies]
clap = { version = "3.2.16", features = [ "derive" ] }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
rand = "0.8.5"
tempfile = "3.3.0"
